# rust-dummy-service

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  fly.toml
model/: logreg_iris.onnx
src/: config.rs  handlers.rs  main.rs  model.rs  setup.rs  structs.rs
