[package]
name = "rust-dummy-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "*", features = ["headers"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
envconfig = { version = "*" }
log = { version = "*" }
env_logger = { version = "*" }
ort = { version = "2.0.0-rc.2" }
ndarray = { version = "*" }
